--- a/design.css
+++ b/design.css
@@ -10,9 +10,25 @@ body {
     background-color:dimgrey;
     display: grid;
     grid-template-columns: 20% 20% 20% 20% 20%;
-
+    font-family: "copperplate", fantasy, sans-serif;
+    color:antiquewhite;
 }
 
 .footer {
     background-color:dimgrey;
 }
+
+.button {
+    text-decoration: None;
+    border: none;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+    width: 100%;
+    height: 100%;
+
+}
+.button:hover {
+    background-color:rgb(70, 70, 70);
+    color: white;
+  }
