--- a/design.css
+++ b/design.css
@@ -26,7 +26,7 @@ body {
     display: inline-block;
     width: 100%;
     height: 100%;
-
+    color:antiquewhite;
 }
 .button:hover {
     background-color:rgb(70, 70, 70);
