--- a/design.css
+++ b/design.css
@@ -1,7 +1,7 @@
 body {
     background-color: lightgrey;
     display: grid;
-    grid-template-rows: 10% 85% 5%;
+    grid-template-rows: 10% 85% 70% 5%;
     padding:0;
     margin:0;
   }
@@ -31,4 +31,10 @@ body {
 .button:hover {
     background-color:rgb(70, 70, 70);
     color: white;
-  }
+}
+
+
+.socialMediaLink {
+
+
+}
