--- a/design.css
+++ b/design.css
@@ -41,9 +41,12 @@ body {
     color: white;
 }
 
-
+.socialMediaBoard{
+    display: grid;
+    grid-template-columns: 20% 20% 20% 20% 20%;
+}
 .socialMediaLink {
-    grid-template-rows: 25% 25% 25% 25%;
 
+    font-size: 30pt;
 
 }
