--- a/design.css
+++ b/design.css
@@ -43,7 +43,7 @@ body {
 
 .socialMediaBoard{
     display: grid;
-    grid-template-columns: 20% 20% 20% 20% 20%;
+    grid-template-rows: 10% 10% 10% 10% 10% 50%;
 }
 .socialMediaLink {
 
