--- a/design.css
+++ b/design.css
@@ -43,7 +43,7 @@ body {
 
 .socialMediaBoard{
     display: grid;
-    grid-template-rows: 10% 10% 10% 10% 10% 50%;
+    grid-template-rows: 10% 10% 10% 10% 10% 10% 40%;
 }
 .socialMediaLink {
 
