--- a/design.css
+++ b/design.css
@@ -43,10 +43,10 @@ body {
 
 .socialMediaBoard{
     display: grid;
-    grid-template-rows: 10% 10% 10% 10% 10% 10% 40%;
+    grid-template-rows: 10% 10% 10% 10% 10% 10% 10% 30%;
 }
 .socialMediaLink {
-
+    color: mediumseagreen;
     font-size: 30pt;
 
 }
