--- a/design.css
+++ b/design.css
@@ -43,7 +43,8 @@ body {
 
 .socialMediaBoard{
     display: grid;
-    grid-template-rows: 10% 10% 10% 10% 10% 10% 10% 30%;
+    grid-template-rows: 5% 10% 10% 10% 10% 10% 10% 35%;
+    text-align: right;
 }
 .socialMediaLink {
     color: mediumseagreen;
