--- a/design.css
+++ b/design.css
@@ -47,7 +47,7 @@ body {
     text-align: center;
 }
 .socialMediaLink {
-    color: mediumseagreen;
+    color: royalblue;
     font-size: 30pt;
 
 }
