added color box

--- a/design.css
+++ b/design.css
@@ -45,6 +45,8 @@ body {
     display: grid;
     grid-template-rows: 5% 10% 10% 10% 10% 10% 10% 10% 10 15%;
     text-align: center;
+    border-top-color: royalblue;
+    border-width: 3px;
 }
 .socialMediaLink {
     color: royalblue;
