--- a/design.css
+++ b/design.css
@@ -43,10 +43,10 @@ body {
 
 .socialMediaBoard{
     display: grid;
-    grid-template-rows: 5% 10% 10% 10% 10% 10% 10% 10% 10 15%;
+    grid-template-rows: 5% 10% 10% 10% 10% 10% 10% 10% 10% 15%;
     text-align: center;
-    border-top-color: royalblue;
-    border-width: 3px;
+    border-color: royalblue;
+    border-width:3px;
 }
 .socialMediaLink {
     color: royalblue;
