--- a/design.css
+++ b/design.css
@@ -51,3 +51,11 @@ body {
     font-size: 30pt;
 
 }
+
+.grow { 
+    transition: all .2s ease-in-out; 
+    }
+    
+    .grow:hover { 
+    transform: scale(1.1); 
+    }
