--- a/design.css
+++ b/design.css
@@ -49,13 +49,9 @@ body {
 .socialMediaLink {
     color: royalblue;
     font-size: 30pt;
-
+    transition: all .2s ease-in-out
 }
-
-.grow { 
-    transition: all .2s ease-in-out; 
-    }
     
-    .grow:hover { 
+.socialMediaLink:hover { 
     transform: scale(1.1); 
     }
