--- a/design.css
+++ b/design.css
@@ -49,6 +49,7 @@ body {
 .socialMediaLink {
     color: royalblue;
     font-size: 30pt;
+    transition: all .2s ease-in-out;
 }
     
 .socialMediaLink:hover { 
